# cuda-fft-convolution2d

./: CMakeLists.txt  Dockerfile
benchmarks/: kernel1.csv  kernel2.csv
python-code/: main.py  main_3d.py
src/: fft.cu  fft.cuh  fft.h  fft_utils.cu  ftt.cpp  main.cpp  utils.cpp  utils.h
test/: test.cpp
